[gd_scene load_steps=16 format=2]

[ext_resource path="res://soldier1_hold.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://tile_08.png" type="Texture" id=4]
[ext_resource path="res://wall.tres" type="TileSet" id=5]
[ext_resource path="res://pictureLightMask2_thumb.png" type="Texture" id=6]
[ext_resource path="res://main.gd" type="Script" id=7]
[ext_resource path="res://Pacifico.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://score.gd" type="Script" id=9]
[ext_resource path="res://Camera2D.gd" type="Script" id=10]
[ext_resource path="res://enemy_2.tscn" type="PackedScene" id=11]
[ext_resource path="res://power_up.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.9618, 16.2332 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.5208, 17.5695 )

[sub_resource type="DynamicFont" id=3]
size = 60
use_filter = true
font_data = ExtResource( 8 )

[node name="main" type="Node2D"]
script = ExtResource( 7 )
enemies = [ ExtResource( 3 ), ExtResource( 11 ) ]
power_ups = [ ExtResource( 12 ) ]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 188.038, 119.865 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.789474, 0.813953 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.8909, 0.222725 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Player" groups=[
"Player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( 0.668182, 0.222725 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.85, 0.85 )
smoothing_enabled = true
script = ExtResource( 10 )

[node name="screen_shake_time" type="Timer" parent="Player/Camera2D"]

[node name="Light2D" type="Light2D" parent="Player"]
texture = ExtResource( 6 )
texture_scale = 3.06
color = Color( 0.47451, 0.823529, 0.901961, 1 )
energy = 0.76
shadow_enabled = true

[node name="Reload_attack" type="Timer" parent="Player"]
wait_time = 0.1
one_shot = true

[node name="power_up_cool_down" type="Timer" parent="Player"]
wait_time = 2.5

[node name="Enemy" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="Enemy"]
wait_time = 0.1
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.25, 0.25 )
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, 65535, 0, 0, 32, 0, 0, 33, 0, 0, 62, 0, 0, 131071, 0, 0, 65568, 0, 0, 65569, 0, 0, 65598, 0, 0, 196607, 0, 0, 131104, 0, 0, 131105, 0, 0, 131134, 0, 0, 262143, 0, 0, 196640, 0, 0, 196641, 0, 0, 196670, 0, 0, 327679, 0, 0, 262176, 0, 0, 262177, 0, 0, 262206, 0, 0, 393215, 0, 0, 327712, 0, 0, 327713, 0, 0, 327742, 0, 0, 458751, 0, 0, 393248, 0, 0, 393249, 0, 0, 393278, 0, 0, 524287, 0, 0, 458784, 0, 0, 458785, 0, 0, 458814, 0, 0, 589823, 0, 0, 524320, 0, 0, 524321, 0, 0, 524350, 0, 0, 655359, 0, 0, 589856, 0, 0, 589857, 0, 0, 589886, 0, 0, 720895, 0, 0, 655392, 0, 0, 655393, 0, 0, 655422, 0, 0, 786431, 0, 0, 720928, 0, 0, 720929, 0, 0, 720958, 0, 0, 851967, 0, 0, 786494, 0, 0, 917503, 0, 0, 852030, 0, 0, 983039, 0, 0, 917566, 0, 0, 1048575, 0, 0, 983102, 0, 0, 1114111, 0, 0, 1048638, 0, 0, 1179647, 0, 0, 1114174, 0, 0, 1245183, 0, 0, 1179710, 0, 0, 1310719, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245233, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1245239, 0, 0, 1245240, 0, 0, 1245241, 0, 0, 1245242, 0, 0, 1245243, 0, 0, 1245244, 0, 0, 1245245, 0, 0, 1245246, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310769, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1638399, 0, 0, 1572913, 0, 0, 1703935, 0, 0, 1638449, 0, 0, 1638450, 0, 0, 1638451, 0, 0, 1638452, 0, 0, 1638453, 0, 0, 1638454, 0, 0, 1638455, 0, 0, 1638456, 0, 0, 1638457, 0, 0, 1638458, 0, 0, 1638459, 0, 0, 1638460, 0, 0, 1638461, 0, 0, 1769471, 0, 0, 1703997, 0, 0, 1835007, 0, 0, 1769533, 0, 0, 1900543, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1835041, 0, 0, 1835042, 0, 0, 1835043, 0, 0, 1835069, 0, 0, 1966079, 0, 0, 1900575, 0, 0, 1900576, 0, 0, 1900577, 0, 0, 1900578, 0, 0, 1900579, 0, 0, 1900605, 0, 0, 2031615, 0, 0, 1966111, 0, 0, 1966112, 0, 0, 1966113, 0, 0, 1966114, 0, 0, 1966115, 0, 0, 1966141, 0, 0, 2097151, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031677, 0, 0, 2162687, 0, 0, 2097183, 0, 0, 2097184, 0, 0, 2097185, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097210, 0, 0, 2097211, 0, 0, 2097212, 0, 0, 2097213, 0, 0, 2228223, 0, 0, 2162749, 0, 0, 2293759, 0, 0, 2228279, 0, 0, 2228285, 0, 0, 2359295, 0, 0, 2293815, 0, 0, 2293821, 0, 0, 2424831, 0, 0, 2359351, 0, 0, 2359357, 0, 0, 2490367, 0, 0, 2424832, 0, 0, 2424833, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424839, 0, 0, 2424840, 0, 0, 2424841, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2424851, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 2424889, 0, 0, 2424890, 0, 0, 2424891, 0, 0, 2424892, 0, 0, 2424893, 0, 0, 2490387, 0, 0, 2490418, 0, 0, 2555923, 0, 0, 2555954, 0, 0, 2621459, 0, 0, 2621490, 0, 0, 2686995, 0, 0, 2687026, 0, 0, 2752531, 0, 0, 2752562, 0, 0, 2818067, 0, 0, 2818068, 0, 0, 2818069, 0, 0, 2818070, 0, 0, 2818071, 0, 0, 2818072, 0, 0, 2818073, 0, 0, 2818074, 0, 0, 2818075, 0, 0, 2818076, 0, 0, 2818077, 0, 0, 2818078, 0, 0, 2818079, 0, 0, 2818080, 0, 0, 2818081, 0, 0, 2818097, 0, 0, 2818098, 0, 0, 2883603, 0, 0, 2883604, 0, 0, 2883605, 0, 0, 2883606, 0, 0, 2883607, 0, 0, 2883608, 0, 0, 2883609, 0, 0, 2883610, 0, 0, 2883611, 0, 0, 2883612, 0, 0, 2883613, 0, 0, 2883614, 0, 0, 2883615, 0, 0, 2883616, 0, 0, 2883617, 0, 0, 2883633, 0, 0, 2949139, 0, 0, 2949152, 0, 0, 2949153, 0, 0, 2949169, 0, 0, 3014675, 0, 0, 3014688, 0, 0, 3014689, 0, 0, 3014705, 0, 0, 3080200, 0, 0, 3080201, 0, 0, 3080202, 0, 0, 3080203, 0, 0, 3080204, 0, 0, 3080205, 0, 0, 3080206, 0, 0, 3080207, 0, 0, 3080208, 0, 0, 3080209, 0, 0, 3080210, 0, 0, 3080211, 0, 0, 3080224, 0, 0, 3080225, 0, 0, 3080241, 0, 0, 3145736, 0, 0, 3145760, 0, 0, 3145761, 0, 0, 3145777, 0, 0, 3211272, 0, 0, 3211296, 0, 0, 3211297, 0, 0, 3211313, 0, 0, 3276832, 0, 0, 3276833, 0, 0, 3276849, 0, 0, 3342366, 0, 0, 3342367, 0, 0, 3342368, 0, 0, 3342369, 0, 0, 3342385, 0, 0, 3342386, 0, 0, 3342387, 0, 0, 3342388, 0, 0, 3342389, 0, 0, 3342390, 0, 0, 3342391, 0, 0, 3342392, 0, 0, 3342393, 0, 0, 3342394, 0, 0, 3342395, 0, 0, 3342396, 0, 0, 3342397, 0, 0, 3407933, 0, 0, 3473416, 0, 0, 3473469, 0, 0, 3538952, 0, 0, 3539005, 0, 0, 3604488, 0, 0, 3604510, 0, 0, 3604511, 0, 0, 3604512, 0, 0, 3604541, 0, 0, 3670024, 0, 0, 3670046, 0, 0, 3670047, 0, 0, 3670048, 0, 0, 3670077, 0, 0, 3735560, 0, 0, 3735582, 0, 0, 3735583, 0, 0, 3735584, 0, 0, 3735613, 0, 0, 3801096, 0, 0, 3801118, 0, 0, 3801119, 0, 0, 3801120, 0, 0, 3801149, 0, 0, 3866632, 0, 0, 3866654, 0, 0, 3866655, 0, 0, 3866656, 0, 0, 3866685, 0, 0, 3932168, 0, 0, 3932190, 0, 0, 3932191, 0, 0, 3932192, 0, 0, 3932221, 0, 0, 3997704, 0, 0, 3997726, 0, 0, 3997727, 0, 0, 3997728, 0, 0, 3997757, 0, 0, 4063240, 0, 0, 4063241, 0, 0, 4063242, 0, 0, 4063243, 0, 0, 4063244, 0, 0, 4063245, 0, 0, 4063246, 0, 0, 4063247, 0, 0, 4063248, 0, 0, 4063249, 0, 0, 4063250, 0, 0, 4063251, 0, 0, 4063252, 0, 0, 4063253, 0, 0, 4063254, 0, 0, 4063255, 0, 0, 4063256, 0, 0, 4063257, 0, 0, 4063258, 0, 0, 4063259, 0, 0, 4063260, 0, 0, 4063261, 0, 0, 4063262, 0, 0, 4063263, 0, 0, 4063264, 0, 0, 4063265, 0, 0, 4063266, 0, 0, 4063267, 0, 0, 4063268, 0, 0, 4063273, 0, 0, 4063274, 0, 0, 4063275, 0, 0, 4063276, 0, 0, 4063277, 0, 0, 4063278, 0, 0, 4063279, 0, 0, 4063280, 0, 0, 4063281, 0, 0, 4063282, 0, 0, 4063283, 0, 0, 4063284, 0, 0, 4063285, 0, 0, 4063286, 0, 0, 4063287, 0, 0, 4063288, 0, 0, 4063289, 0, 0, 4063290, 0, 0, 4063291, 0, 0, 4063292, 0, 0, 4063293, 0, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 717.886, 395.812 )
scale = Vector2( 35.6483, 24.4671 )
z_index = -1
texture = ExtResource( 4 )

[node name="enemy_spawn" type="Timer" parent="."]
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
margin_right = 1024.0
margin_bottom = 1024.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="UI/Control"]
margin_top = -20.0
margin_right = 1024.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 1
autowrap = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power_up_spawn_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Player/Camera2D/screen_shake_time" to="Player/Camera2D" method="_on_screen_shake_time_timeout"]
[connection signal="timeout" from="Player/Reload_attack" to="Player" method="_on_Timer_timeout"]
[connection signal="timeout" from="Player/power_up_cool_down" to="Player" method="_on_power_up_cool_down_timeout"]
[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_Timer_timeout"]
[connection signal="timeout" from="enemy_spawn" to="." method="_on_enemy_spawn_timeout"]
[connection signal="timeout" from="power_up_spawn_timer" to="." method="_on_power_up_spawn_timer_timeout"]
